Día 6.2: Añadir jugadores y CPU a la partida.